# sam2

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  normalizer.cpp  normalizer.h  sam2_parser.cpp  sam2_parser.h  sam2_parser_impl.cpp  samx_parser.cpp  samx_parser.h  samx_parser_impl.cpp  unindent.cpp  validate.cpp
test/data/: 1.1.sam  2.1.sam  2.sam  3.0.sam  3.1.sam  3.2.sam  3.4.sam  4.1.sam  5.1.sam
